--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -66,7 +66,9 @@
             </div>
         </nav>
 
-        <div class="uk-container"></div>
+        <div class="uk-container">
+            <table id="dataTable" class="uk-table"></table>
+        </div>
 
         <!-- Scripts -->
         <script src="./main.js"></script>
