updated about page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                                 </div>
                             </li>
 
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
+                            <li><a href="/ml_lab/about.html">About</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
