--- a/index.html
+++ b/index.html
@@ -41,31 +41,33 @@
                     </div>
                     <div class="uk-navbar-right">
                         <ul class="uk-navbar-nav">
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./pages/about.html">About Us</a></li>
                             <li>
-                                <a href="#"
-                                    >Item <span uk-navbar-parent-icon></span
-                                ></a>
-                                <div class="uk-navbar-dropdown">
-                                    <ul class="uk-nav uk-navbar-dropdown-nav">
-                                        <li><a href="#">Item</a></li>
-                                        <li><a href="#">Item</a></li>
-                                        <li><a href="#">Item</a></li>
-                                        <li class="uk-nav-divider"></li>
-                                        <li><a href="#">Item</a></li>
-                                    </ul>
-                                </div>
+                                <a href="./pages/publications.html"
+                                    >Publications</a
+                                >
                             </li>
-
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
+                            <li><a href="#">Research</a></li>
+                            <li>
+                                <a href="./pages/contact.html">Contact Us</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
 
+        <div class="uk-cover-container uk-height-viewport">
+            <video
+                src="./videos/cover2.mp4"
+                autoplay
+                loop
+                muted
+                playsinline
+                uk-cover
+            ></video>
+        </div>
         <div class="uk-container">
             <table id="dataTable" class="uk-table"></table>
         </div>
