--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
                     <div class="uk-navbar-left">
                         <a
                             class="uk-navbar-item uk-logo"
-                            href="#"
+                            href="./index.html"
                             aria-label="Back to Home"
-                            >Logo</a
                         >
+                            <img src="./images/DTU.png" alt="DTU_Logo" />
+                            Machine Learning Lab
+                        </a>
                     </div>
                     <div class="uk-navbar-right">
                         <ul class="uk-navbar-nav">
@@ -58,7 +60,7 @@
             </div>
         </nav>
 
-        <div class="uk-cover-container uk-height-viewport">
+        <div class="uk-cover-container cover_cont">
             <video
                 src="./videos/cover2.mp4"
                 autoplay
