--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- <link rel="stylesheet" href="../css/style.css" /> -->
+        <link rel="stylesheet" href="../css/style.css" />
         <link rel="stylesheet" href="../css/contact.css">
 
         <!-- UIkit CSS -->
@@ -65,7 +65,7 @@
         <section class="contact">
             <div class="container contact_container">
                 <aside class="contact_aside">
-                    <div class="aside_image">
+                    <div class="aside_img">
                         <img src="../images/contact.svg" alt="">
                     </div>
                     <h2>Contact Us</h2>
@@ -87,7 +87,7 @@
                         </li>
                     </ul>
 
-                    <ul>
+                    <ul class="contact_socials">
                         <li>
                             <a href="https://www.linkedin.com/">
                                 <img
@@ -118,14 +118,14 @@
                     </ul>
                 </aside>
 
-                <form>
+                <form class="contact_form">
                     <div class="form_name">
                         <input type="text" name="fname" placeholder="First Name" required>
                         <input type="text" name="fname" placeholder="Last Name" required>
                     </div>
                     <input type="email" placeholder="Your Email Address" required>
                     <textarea name="message" placeholder="Write your message" rows="7" required></textarea>
-                    <button class="uk-button uk-button-danger">Send Message</button>
+                    <button class="uk-button uk-button-danger uk-width-1-3">Send Message</button>
                 </form>
             </div>
         </section>
