--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                                     >Publications</a
                                 >
                             </li>
-                            <li><a href="#">Research</a></li>
+                            <li>
+                                <a href="./pages/research.html">Research</a>
+                            </li>
                             <li>
                                 <a href="./pages/contact.html">Contact Us</a>
                             </li>
@@ -347,7 +349,6 @@
                     </div>
                 </div>
             </div>
-            <table id="dataTable" class="uk-table"></table>
         </div>
 
         <!-- Scripts -->
