--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="../css/style.css" />
-        <link rel="stylesheet" href="../css/contact.css">
+        <link rel="stylesheet" href="../css/contact.css" />
 
         <!-- UIkit CSS -->
         <link
@@ -51,7 +51,7 @@
                                     >Publications</a
                                 >
                             </li>
-                            <li><a href="#">Research</a></li>
+                            <li><a href="./research.html">Research</a></li>
                             <li>
                                 <a href="../pages/contact.html">Contact Us</a>
                             </li>
@@ -59,30 +59,43 @@
                     </div>
                 </div>
             </div>
-        </nav>        
-
+        </nav>
 
         <section class="contact">
             <div class="container contact_container">
                 <aside class="contact_aside">
                     <div class="aside_img">
-                        <img src="../images/contact.svg" alt="">
+                        <img src="../images/contact.svg" alt="" />
                     </div>
                     <h2>Contact Us</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quos non assumenda nobis explicabo obcaecati animi consequatur eaque minima ex!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sunt quos non assumenda nobis explicabo obcaecati animi
+                        consequatur eaque minima ex!
                     </p>
                     <ul class="contact_details">
                         <li>
-                            <img src="../images/icon/phone.svg" alt="" class="icon">
+                            <img
+                                src="../images/icon/phone.svg"
+                                alt=""
+                                class="icon"
+                            />
                             <h5>Office_number</h5>
                         </li>
                         <li>
-                            <img src="../images/icon/mail.svg" alt="" class="icon">
+                            <img
+                                src="../images/icon/mail.svg"
+                                alt=""
+                                class="icon"
+                            />
                             <h5>Office_email</h5>
                         </li>
                         <li>
-                            <img src="../images/icon/location.svg" alt="" class="icon">
+                            <img
+                                src="../images/icon/location.svg"
+                                alt=""
+                                class="icon"
+                            />
                             <h5>Office_location</h5>
                         </li>
                     </ul>
@@ -120,15 +133,35 @@
 
                 <form class="contact_form">
                     <div class="form_name">
-                        <input type="text" name="fname" placeholder="First Name" required>
-                        <input type="text" name="fname" placeholder="Last Name" required>
+                        <input
+                            type="text"
+                            name="fname"
+                            placeholder="First Name"
+                            required
+                        />
+                        <input
+                            type="text"
+                            name="fname"
+                            placeholder="Last Name"
+                            required
+                        />
                     </div>
-                    <input type="email" placeholder="Your Email Address" required>
-                    <textarea name="message" placeholder="Write your message" rows="7" required></textarea>
-                    <button class="uk-button uk-button-danger uk-width-1-3">Send Message</button>
+                    <input
+                        type="email"
+                        placeholder="Your Email Address"
+                        required
+                    />
+                    <textarea
+                        name="message"
+                        placeholder="Write your message"
+                        rows="7"
+                        required
+                    ></textarea>
+                    <button class="uk-button uk-button-danger uk-width-1-3">
+                        Send Message
+                    </button>
                 </form>
             </div>
         </section>
-        
     </body>
 </html>
