--- a/pages/research.html
+++ b/pages/research.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="../css/style.css" />
-        <link rel="stylesheet" href="publications.css" />
 
         <!-- UIkit CSS -->
         <link
@@ -24,7 +23,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
-        <title>Publications</title>
+        <title>Research</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -60,15 +59,6 @@
             </div>
         </nav>
 
-        <div class="uk-container uk-padding-small">
-            <div class="uk-card uk-card-default uk-margin-bottom">
-                <div class="uk-card-body">
-                    <h2 class="uk-text-uppercase">Publications</h2>
-                </div>
-            </div>
-            <div id="data" class="uk-grid-small uk-margin-bottom" uk-grid></div>
-            <div id="pagination"></div>
-        </div>
-        <script src="publications.js"></script>
+        <div class="uk-container uk-padding-small"></div>
     </body>
 </html>
