--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
             </div>
         </nav>
 
-        <div class="uk-cover-container cover_cont" tabindex="0">
+        <div
+            class="uk-cover-container cover_cont"
+            tabindex="0"
+            uk-scrollspy="cls:uk-animation-fade; delay: 500"
+        >
             <video
                 src="./videos/cover2.mp4"
                 autoplay
@@ -86,11 +90,15 @@
                     />
                 </div>
                 <h1
-                    class="cover-head uk-text-uppercase uk-text-bold uk-animation-fade"
+                    class="cover-head uk-text-uppercase uk-text-bold"
+                    uk-scrollspy="cls:uk-animation-fade; delay:1000"
                 >
                     Machine Learning
                 </h1>
-                <h1 class="cover-head uk-text-uppercase uk-text-bold">
+                <h1
+                    class="cover-head uk-text-uppercase uk-text-bold"
+                    uk-scrollspy="cls:uk-animation-fade; delay:1500"
+                >
                     Laboratory
                 </h1>
             </div>
@@ -104,6 +112,7 @@
             <div
                 class="uk-grid-small uk-child-width-1-3@m uk-flex uk-flex-wrap"
                 uk-grid="masonry:true"
+                uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-card; delay: 500; repeat:true; margin:30%"
             >
                 <div>
                     <div class="uk-card uk-card-default">
