--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,7 +67,7 @@
                     <div class="aside_img">
                         <img src="../images/contact.svg" alt="" />
                     </div>
-                    <h2>Contact Us</h2>
+                    <h2><b>Contact Us</b></h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Sunt quos non assumenda nobis explicabo obcaecati animi
