added search functionality

--- a/index.html
+++ b/index.html
@@ -360,6 +360,44 @@
             </div>
         </div>
 
+        <!-- Footer -->
+        <footer
+            class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
+        >
+            <div class="uk-container">
+                <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
+                    <div>
+                        <h3>Footer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt.ratione
+                            mollitia eaque, soluta doloremque quidem. Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit.
+                            Dolorem nam tempore quo itaque illo sunt porro
+                            commodi quisquam pariatur neque unde nulla odit
+                            recusandae velit, expedita esse! Minima, quod
+                            tempora. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Footer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt.ratione
+                            mollitia eaque, soluta doloremque quidem. Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit.
+                            Dolorem nam tempore quo itaque illo sunt porro
+                            commodi quisquam pariatur neque unde nulla odit
+                            recusandae velit, expedita esse! Minima, quod
+                            tempora. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <!-- Scripts -->
         <script src="./main.js"></script>
     </body>
