--- a/pages/research.html
+++ b/pages/research.html
@@ -59,6 +59,24 @@
             </div>
         </nav>
 
+        <!-- Research sections -->
+
+        <section class="uk-section uk-section-xlarge uk-section-primary">
+            <div class="uk-container">
+                <h1>Research</h1>
+                <p>
+                    The research in the Machine Learning Lab is focused on
+                    developing machine learning algorithms for solving
+                    challenging problems in the field of computer vision and
+                    image processing. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven.
+                </p>
+            </div>
+        </section>
+
         <div class="uk-container uk-padding-small"></div>
     </body>
 </html>
