--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-card; delay: 500; repeat:true; margin:30%"
             >
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top uk-padding-small">
                             <img
                                 src="images/tm3.jpg"
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
                             <h3 class="uk-card-title">Media Bottom</h3>
                             <p>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top uk-padding-small">
                             <img
                                 src="images/tm7.jpg"
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
                             <h3 class="uk-card-title">Media Bottom</h3>
                             <p>
@@ -237,7 +237,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top uk-padding-small">
                             <img
                                 src="images/tm5.jpg"
@@ -262,7 +262,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top uk-padding-small">
                             <img
                                 src="images/course11.jpg"
@@ -287,7 +287,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
                             <h3 class="uk-card-title">Heading</h3>
                             <p>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
                             <h3 class="uk-card-title">Heading</h3>
                             <p>
@@ -330,7 +330,7 @@
                     </div>
                 </div>
                 <div>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
                             <h3 class="uk-card-title">Heading</h3>
                             <p>
