--- a/index.html
+++ b/index.html
@@ -104,51 +104,41 @@
             </div>
         </div>
         <div class="uk-container uk-padding-small">
-            <div class="uk-card uk-card-default uk-margin-bottom">
+            <!-- <div class="uk-card uk-card-default uk-margin-bottom">
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Heading</h3>
                 </div>
-            </div>
+            </div> -->
             <div
                 class="uk-grid-small uk-child-width-1-3@m uk-flex uk-flex-wrap"
                 uk-grid="masonry:true"
-                uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-card; delay: 500; repeat:true; margin:30%"
+                uk-scrollspy="cls: uk-animation-slide-bottom; target: .uk-card; delay: 500; repeat:false; margin:30%"
             >
                 <div>
                     <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top uk-padding-small">
                             <img
-                                src="images/tm3.jpg"
+                                src="images/Research paper-amico.svg"
                                 width="1800"
-                                height="1200"
+                                height="1000"
                                 alt=""
                             />
                         </div>
                         <div class="uk-card-body">
-                            <h3 class="uk-card-title">Media Top</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt. Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Tenetur, error
-                                odio expedita et nisi commodi repudiandae, in a
-                                aliquam libero ratione iste consectetur! Aliquam
-                                ratione mollitia eaque, soluta doloremque
-                                quidem. Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Dolorem nam tempore quo itaque
-                                illo sunt porro commodi quisquam pariatur neque
-                                unde nulla odit recusandae velit, expedita esse!
-                                Minima, quod tempora. Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Natus, cum amet
-                                ipsa quis, iusto voluptates nulla explicabo
-                                provident sunt odit suscipit. Error fugiat
-                                delectus temporibus, aperiam aspernatur
-                                quibusdam earum? Voluptatum? Lorem ipsum dolor
-                                sit amet consectetur adipisicing elit.
-                            </p>
+                            <h3 class="uk-heading-small uk-heading-divider">
+                                Publications
+                            </h3>
+                            <div
+                                id="data"
+                                class="uk-grid-small uk-margin-top uk-margin-bottom uk-child-width-1-1"
+                                uk-grid
+                                uk-scrollspy="cls: uk-animation-slide-right; target: .uk-card; delay: 150; repeat:false; margin:10%"
+                            ></div>
                         </div>
                         <div class="uk-card-footer">
-                            <a href="#" class="uk-button uk-button-text"
+                            <a
+                                href="./pages/publications.html"
+                                class="uk-button uk-button-text"
                                 >Read more</a
                             >
                         </div>
@@ -211,6 +201,7 @@
                         </div>
                     </div>
                 </div>
+                <div></div>
                 <div>
                     <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
@@ -329,6 +320,7 @@
                         </div>
                     </div>
                 </div>
+                <div></div>
                 <div>
                     <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-body">
